<resources>
    <string name="app_name">Boomer</string>
    <string name="app_desc">Your music caring partner</string>
    <string name="logo_desc">logger image</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="fullName">Full name</string>
    <string name="uname">User name</string>
    <string name="passcode">Password</string>
    <string name="email">Email address</string>
    <string name="phone">Phone number</string>
    <string name="new_user">New user? Sign up</string>
    <string name="have_accnt">Already have an Account</string>
    <string name="forget">Forgot password?</string>
    <string name="login_icon">login_icon</string>
    <string name="google">Sign up with google</string>
    <string name="fb">Sign up with facebook</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="notify">Notification</string>
    <string name="set">Settings</string>
    <string name="recent">Recent</string>
    <string name="psets">Piano sets</string>
    <string name="gsets">Guitar sets</string>
    <string name="ssets">Saxophone sets</string>
    <string name="homeImage">homeImage</string>
    <string name="welcome">Your happy music place</string>
    <string name="cartIcon">Cart Icon</string>
    <string name="searchIcon">Search Icon</string>
    <string name="menuDots">Menu Icon</string>
    <string name="promo">Great Instrument deals.. </string>

    <string name="alternative">Or</string>



    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_here">Notifications here</string>
    <string name="notifications_from_boomer">Notifications from Boomer</string>
    <string name="simage">sImage</string>


</resources>