<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shoppingCart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="30dp"


        android:contentDescription="@string/cartIcon"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/appName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuDots"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="10dp"
        android:contentDescription="@string/menuDots"
        android:src="@drawable/ic_more_vert_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="30dp"

        android:contentDescription="@string/searchIcon"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintStart_toEndOf="@+id/shoppingCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingTitle"
        android:layout_width="103dp"
        android:layout_height="33dp"
        android:layout_marginStart="155dp"

        android:layout_marginTop="80dp"
        android:layout_marginEnd="154dp"
        android:text="@string/store"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>