<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="216dp"
        android:layout_height="44dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="178dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginImg"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="42dp"
        android:contentDescription="@string/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/uname"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passcode"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="@string/passcode"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/passcode"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="290dp"
        android:layout_height="75dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="159dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="22dp"
        android:layout_marginStart="227dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="60dp"
        android:text="@string/forget"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newUserBtn"
        android:layout_width="154dp"
        android:layout_height="23dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="122dp"
        android:text="@string/new_user"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>