<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="177dp"
        android:layout_height="184dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_music_svgrepo_com"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="@font/almendra"
        android:lineSpacingExtra="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:fontFamily="@font/bubbler_one"
        android:text="@string/app_desc"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>