<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/box_design1"
    android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:layout_height="180dp">


    <ImageView
        android:id="@+id/nImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/notifications_background"
        android:scaleType="centerCrop"
        app:layout_constraintCircleRadius="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/simage"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/nTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/notifications_here"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nDesc"
        app:layout_constraintEnd_toEndOf="@+id/nImage"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/nImage" />

    <TextView
        android:id="@+id/nDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/notifications_from_boomer"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>